refactor: cleanup code